--- a/index.html
+++ b/index.html
@@ -6,78 +6,119 @@
   <title>Analiza Polis Ubezpieczeniowych</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f7fa;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f9fc;
       margin: 0;
       padding: 0;
       color: #333;
     }
     header {
-      background-color: #0077cc;
+      background-color: #0069d9;
       color: white;
-      padding: 20px;
+      padding: 20px 10px;
       text-align: center;
+      font-size: 1.8rem;
+      font-weight: 700;
+      letter-spacing: 1px;
     }
     main {
       max-width: 600px;
-      margin: 40px auto;
+      margin: 30px auto;
       background: white;
-      padding: 30px;
+      padding: 25px 30px;
       border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
-    h1 {
+    h2 {
+      color: #0069d9;
       margin-top: 0;
+      font-weight: 700;
+      text-align: center;
     }
-    label {
+    p {
+      line-height: 1.5;
+      margin-bottom: 20px;
+    }
+    form label {
       display: block;
-      margin-top: 15px;
-      font-weight: bold;
+      font-weight: 600;
+      margin: 15px 0 5px;
     }
     input[type="text"],
     input[type="email"],
     input[type="tel"],
     textarea {
       width: 100%;
-      padding: 10px;
-      margin-top: 5px;
+      padding: 10px 12px;
       border: 1px solid #ccc;
-      border-radius: 4px;
+      border-radius: 5px;
       font-size: 1rem;
+      resize: vertical;
       box-sizing: border-box;
+      transition: border-color 0.3s ease;
+    }
+    input[type="text"]:focus,
+    input[type="email"]:focus,
+    input[type="tel"]:focus,
+    textarea:focus {
+      border-color: #0069d9;
+      outline: none;
     }
     input[type="file"] {
-      margin-top: 10px;
+      margin-top: 5px;
     }
     button {
-      margin-top: 25px;
-      background-color: #0077cc;
+      background-color: #0069d9;
       color: white;
-      padding: 12px 20px;
       border: none;
-      border-radius: 4px;
+      padding: 14px;
       font-size: 1.1rem;
+      border-radius: 6px;
       cursor: pointer;
+      margin-top: 25px;
       width: 100%;
+      transition: background-color 0.3s ease;
     }
     button:hover {
-      background-color: #005fa3;
+      background-color: #0053ba;
+    }
+    .confirmation {
+      margin-top: 20px;
+      padding: 15px;
+      background-color: #d4edda;
+      color: #155724;
+      border: 1px solid #c3e6cb;
+      border-radius: 5px;
+      display: none;
+      text-align: center;
+      font-weight: 600;
     }
     footer {
       text-align: center;
-      padding: 20px;
+      padding: 15px 10px;
       font-size: 0.9rem;
-      color: #666;
+      color: #777;
+      margin-top: 40px;
+    }
+    section.about {
+      margin-top: 40px;
+      background-color: #e9f0fb;
+      border-radius: 8px;
+      padding: 20px 25px;
+      box-shadow: inset 0 0 10px rgba(0,105,217,0.1);
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Analiza Polis Ubezpieczeniowych</h1>
-  </header>
-  <main>
+
+<header>
+  Analiza Polis Ubezpieczeniowych
+</header>
+
+<main>
+  <section>
     <p>Prześlij swoje polisy ubezpieczeniowe, a my dokładnie je przeanalizujemy i odezwiemy się z raportem oraz rekomendacjami.</p>
-    <form id="policyForm" enctype="multipart/form-data">
+    <form id="insuranceForm">
       <label for="name">Imię i nazwisko</label>
       <input type="text" id="name" name="name" required />
 
@@ -85,28 +126,49 @@
       <input type="email" id="email" name="email" required />
 
       <label for="phone">Numer telefonu</label>
-      <input type="tel" id="phone" name="phone" />
+      <input type="tel" id="phone" name="phone" required />
 
       <label for="files">Prześlij zdjęcia/skany polis (możesz wybrać kilka)</label>
-      <input type="file" id="files" name="files" accept="image/*,application/pdf" multiple required />
+      <input type="file" id="files" name="files" multiple accept="image/*,application/pdf" />
 
       <label for="notes">Dodatkowe informacje lub pytania (opcjonalnie)</label>
-      <textarea id="notes" name="notes" rows="4" placeholder="Np. na co zwrócić szczególną uwagę..."></textarea>
+      <textarea id="notes" name="notes" placeholder="Np. na co zwrócić szczególną uwagę..." rows="4"></textarea>
 
       <button type="submit">Wyślij do analizy</button>
     </form>
-  </main>
-  <footer>
-    &copy; 2025 Twoja Firma Ubezpieczeniowa
-  </footer>
+    <div class="confirmation" id="confirmationMessage">Dziękujemy za przesłanie formularza. Skontaktujemy się wkrótce!</div>
+  </section>
 
-  <script>
-    document.getElementById('policyForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      alert('Dziękujemy! Twoje dokumenty zostały przesłane. Skontaktujemy się wkrótce.');
-      // Tutaj w przyszłości dodamy wysyłkę formularza do serwera
-      this.reset();
-    });
-  </script>
+  <section class="about">
+    <h2>O mnie</h2>
+    <p>
+      Jestem ekspertem w zakresie ubezpieczeń branży medycznej — OC lekarzy, podmiotów leczniczych i szpitali.<br />
+      Ubezpieczamy tysiące lekarzy i placówek medycznych w całej Polsce.<br />
+      Posiadamy w ofercie dedykowane ubezpieczenia dla lekarzy, takie jak utrata dochodu, ubezpieczenia na życie i zdrowie.<br />
+      Współpracujemy ze wszystkimi towarzystwami ubezpieczeniowymi działającymi na rynku OC branży medycznej oraz oferujemy unikatowe programy dedykowane lekarzom i podmiotom leczniczym.
+    </p>
+  </section>
+</main>
+
+<footer>
+  &copy; 2025 Twoja Firma Ubezpieczeniowa
+</footer>
+
+<script>
+  const form = document.getElementById('insuranceForm');
+  const confirmationMessage = document.getElementById('confirmationMessage');
+
+  form.addEventListener('submit', function(event) {
+    event.preventDefault();
+    // Tutaj możesz dodać obsługę wysyłki formularza (np. na maila lub API)
+
+    // Pokazujemy komunikat potwierdzający
+    confirmationMessage.style.display = 'block';
+
+    // Czyścimy formularz
+    form.reset();
+  });
+</script>
+
 </body>
 </html>
